--- a/TMDB/CollectionCell/BackDropCollectionViewCell.xib
+++ b/TMDB/CollectionCell/BackDropCollectionViewCell.xib
@@ -9,15 +9,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BackDropCollectionViewCell" customModule="TMDB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="backdropCollectionViewCell" id="gTV-IL-0wX" customClass="BackDropCollectionViewCell" customModule="TMDB" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="279" height="194"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="279" height="194"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zXu-Uh-IU5">
+                        <rect key="frame" x="0.0" y="0.0" width="279" height="157"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="grF-dI-P7l">
+                        <rect key="frame" x="20" y="167" width="239" height="17"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="139" y="100"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="grF-dI-P7l" secondAttribute="bottom" constant="10" id="GUu-Og-2PL"/>
+                <constraint firstItem="grF-dI-P7l" firstAttribute="top" secondItem="zXu-Uh-IU5" secondAttribute="bottom" constant="10" id="HfB-Lr-B8s"/>
+                <constraint firstItem="zXu-Uh-IU5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ISW-nx-rAh"/>
+                <constraint firstAttribute="trailing" secondItem="grF-dI-P7l" secondAttribute="trailing" constant="20" id="MOq-dr-teh"/>
+                <constraint firstItem="zXu-Uh-IU5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="bMk-Dr-0Ra"/>
+                <constraint firstItem="grF-dI-P7l" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="rG6-rr-mKy"/>
+                <constraint firstAttribute="trailing" secondItem="zXu-Uh-IU5" secondAttribute="trailing" id="vqj-eb-slK"/>
+            </constraints>
+            <size key="customSize" width="279" height="194"/>
+            <connections>
+                <outlet property="imageView" destination="zXu-Uh-IU5" id="tEX-hU-wiO"/>
+                <outlet property="titleLabel" destination="grF-dI-P7l" id="zkB-xr-wOI"/>
+            </connections>
+            <point key="canvasLocation" x="303.62318840579712" y="146.65178571428569"/>
         </collectionViewCell>
     </objects>
 </document>
