--- a/TMDB/Base.lproj/Main.storyboard
+++ b/TMDB/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
                             <constraint firstItem="28k-j4-ZaF" firstAttribute="leading" secondItem="o4o-LG-BcA" secondAttribute="leading" id="qhh-co-9Cd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="The TVDB" id="W8b-Ce-KDJ"/>
+                    <navigationItem key="navigationItem" title="The TVDB" largeTitleDisplayMode="always" id="W8b-Ce-KDJ"/>
                     <connections>
                         <outlet property="tvTableView" destination="28k-j4-ZaF" id="uns-gI-4sf"/>
                         <segue destination="fG7-Yh-swy" kind="show" identifier="toShowDetail" id="HcS-wf-Irw"/>
@@ -121,17 +121,90 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ybn-vv-XSc">
-                                <rect key="frame" x="87" y="161" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wOv-6J-j48">
+                                <rect key="frame" x="10" y="98" width="394" height="42"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ybn-vv-XSc">
+                                <rect key="frame" x="0.0" y="150" width="414" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="EaL-Ua-wBT"/>
+                                </constraints>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="MxW-cI-vgL">
+                                <rect key="frame" x="10" y="400" width="394" height="142"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="GEq-8A-L1f">
+                                        <rect key="frame" x="0.0" y="0.0" width="186.5" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="firstAirDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Is9-OA-DBg">
+                                                <rect key="frame" x="0.0" y="0.0" width="86.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOn-fq-4zw">
+                                                <rect key="frame" x="137.5" y="0.0" width="49" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1n-hW-m4C">
+                                        <rect key="frame" x="0.0" y="40.5" width="68" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="B89-SS-UDl">
+                                        <rect key="frame" x="0.0" y="81" width="93" height="20.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="NRR-cW-P1K">
+                                                <rect key="frame" x="0.0" y="-0.5" width="22" height="20"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="voteAvg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bne-2W-AoL">
+                                                <rect key="frame" x="32" y="0.0" width="61" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="homepage" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kxc-GG-m1v">
+                                        <rect key="frame" x="0.0" y="121.5" width="81" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="UJ0-OB-Bqg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MxW-cI-vgL" firstAttribute="top" secondItem="ybn-vv-XSc" secondAttribute="bottom" constant="10" id="4LP-9N-M1I"/>
+                            <constraint firstItem="UJ0-OB-Bqg" firstAttribute="trailing" secondItem="wOv-6J-j48" secondAttribute="trailing" constant="10" id="Dqm-5T-HEm"/>
+                            <constraint firstItem="MxW-cI-vgL" firstAttribute="leading" secondItem="UJ0-OB-Bqg" secondAttribute="leading" constant="10" id="GID-7K-eFK"/>
+                            <constraint firstItem="UJ0-OB-Bqg" firstAttribute="trailing" secondItem="ybn-vv-XSc" secondAttribute="trailing" id="SzG-c8-ugR"/>
+                            <constraint firstItem="wOv-6J-j48" firstAttribute="top" secondItem="UJ0-OB-Bqg" secondAttribute="top" constant="10" id="aE2-gE-gYV"/>
+                            <constraint firstItem="UJ0-OB-Bqg" firstAttribute="trailing" secondItem="MxW-cI-vgL" secondAttribute="trailing" constant="10" id="ccJ-Vv-Ip5"/>
+                            <constraint firstItem="wOv-6J-j48" firstAttribute="leading" secondItem="UJ0-OB-Bqg" secondAttribute="leading" constant="10" id="nKJ-a7-ZdJ"/>
+                            <constraint firstItem="ybn-vv-XSc" firstAttribute="top" secondItem="wOv-6J-j48" secondAttribute="bottom" constant="10" id="rqb-8S-YZI"/>
+                            <constraint firstItem="ybn-vv-XSc" firstAttribute="leading" secondItem="UJ0-OB-Bqg" secondAttribute="leading" id="s0Q-We-CpT"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="7GU-Ot-sVT"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="7GU-Ot-sVT"/>
                     <connections>
+                        <outlet property="dateLabel" destination="Is9-OA-DBg" id="N2h-0i-bSU"/>
+                        <outlet property="homepageLabel" destination="kxc-GG-m1v" id="kSw-mN-iGk"/>
                         <outlet property="imageLabel" destination="ybn-vv-XSc" id="ElZ-NH-ILz"/>
+                        <outlet property="nameLabel" destination="wOv-6J-j48" id="jbY-ey-wK3"/>
+                        <outlet property="overviewLabel" destination="v1n-hW-m4C" id="NXu-r5-Prn"/>
+                        <outlet property="statusLabel" destination="UOn-fq-4zw" id="oPM-ue-KT6"/>
+                        <outlet property="voteAvgLabel" destination="bne-2W-AoL" id="l9X-3S-S9b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CdC-yb-Thu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -180,6 +253,7 @@
     <resources>
         <image name="4k.tv" catalog="system" width="128" height="97"/>
         <image name="play.tv" catalog="system" width="128" height="97"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
