--- a/TMDB/Base.lproj/Main.storyboard
+++ b/TMDB/Base.lproj/Main.storyboard
@@ -56,26 +56,117 @@
                     <navigationItem key="navigationItem" title="The MovieDB" id="IWe-xG-iHi"/>
                     <connections>
                         <outlet property="movieTableView" destination="sqj-72-Hac" id="Jzf-GJ-Lzj"/>
+                        <segue destination="YrC-hc-0S2" kind="show" identifier="toShowMovieDetail" id="9jC-Xf-shJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pYr-cm-mBM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2863.768115942029" y="-106.47321428571428"/>
         </scene>
-        <!--View Controller-->
+        <!--Movie Detail View Controller-->
         <scene sceneID="ppD-bY-auK">
             <objects>
-                <viewController id="YrC-hc-0S2" sceneMemberID="viewController">
+                <viewController id="YrC-hc-0S2" customClass="MovieDetailViewController" customModule="TMDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PbY-OJ-YiK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVd-cL-zR2">
+                                <rect key="frame" x="10" y="98" width="394" height="42"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jlZ-dt-U1A">
+                                <rect key="frame" x="0.0" y="150" width="414" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="aT4-8x-djp"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1x3-fj-azj">
+                                <rect key="frame" x="10" y="400" width="394" height="182.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="sGg-VF-AcE">
+                                        <rect key="frame" x="0.0" y="0.0" width="188" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="releaseDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZo-MK-9O3">
+                                                <rect key="frame" x="0.0" y="0.0" width="91" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEt-aG-9Eh">
+                                                <rect key="frame" x="141" y="0.0" width="47" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="runtime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNm-J0-072">
+                                        <rect key="frame" x="0.0" y="40.5" width="58.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xn6-ce-Px3">
+                                        <rect key="frame" x="0.0" y="81" width="68" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mgb-8X-sDq">
+                                        <rect key="frame" x="0.0" y="121.5" width="93" height="20.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Qh9-kI-3jk">
+                                                <rect key="frame" x="0.0" y="-0.5" width="22" height="20.5"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="voteAvg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rsu-KU-jaj">
+                                                <rect key="frame" x="32" y="0.0" width="61" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="homepage" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSd-GC-Uj1">
+                                        <rect key="frame" x="0.0" y="162" width="81" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="jcQ-r1-Rwe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="uVd-cL-zR2" firstAttribute="top" secondItem="jcQ-r1-Rwe" secondAttribute="top" constant="10" id="78X-iO-vyz"/>
+                            <constraint firstItem="jcQ-r1-Rwe" firstAttribute="trailing" secondItem="1x3-fj-azj" secondAttribute="trailing" constant="10" id="D09-Gu-VTR"/>
+                            <constraint firstItem="uVd-cL-zR2" firstAttribute="leading" secondItem="jcQ-r1-Rwe" secondAttribute="leading" constant="10" id="ERz-Nf-xnq"/>
+                            <constraint firstItem="jcQ-r1-Rwe" firstAttribute="trailing" secondItem="uVd-cL-zR2" secondAttribute="trailing" constant="10" id="NZe-TN-6vE"/>
+                            <constraint firstItem="1x3-fj-azj" firstAttribute="leading" secondItem="jcQ-r1-Rwe" secondAttribute="leading" constant="10" id="Pjs-jP-FPO"/>
+                            <constraint firstItem="1x3-fj-azj" firstAttribute="top" secondItem="jlZ-dt-U1A" secondAttribute="bottom" constant="10" id="W2A-jh-uYN"/>
+                            <constraint firstItem="jlZ-dt-U1A" firstAttribute="leading" secondItem="jcQ-r1-Rwe" secondAttribute="leading" id="dnd-F9-D6w"/>
+                            <constraint firstItem="jlZ-dt-U1A" firstAttribute="trailing" secondItem="jcQ-r1-Rwe" secondAttribute="trailing" id="epy-w8-qfl"/>
+                            <constraint firstItem="jlZ-dt-U1A" firstAttribute="top" secondItem="uVd-cL-zR2" secondAttribute="bottom" constant="10" id="w0s-JE-LZM"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="g4o-e1-pab"/>
+                    <connections>
+                        <outlet property="homepageLabel" destination="TSd-GC-Uj1" id="74t-fe-Mb4"/>
+                        <outlet property="imageLabel" destination="jlZ-dt-U1A" id="Z15-SU-FDB"/>
+                        <outlet property="overviewLabel" destination="xn6-ce-Px3" id="eHA-Xp-k94"/>
+                        <outlet property="releaseDateLabel" destination="vZo-MK-9O3" id="jYz-Cy-bYy"/>
+                        <outlet property="runtimeLabel" destination="XNm-J0-072" id="nzH-3X-hcc"/>
+                        <outlet property="statusLabel" destination="xEt-aG-9Eh" id="P7d-Nn-pX6"/>
+                        <outlet property="titleLabel" destination="uVd-cL-zR2" id="ZP0-FF-YDb"/>
+                        <outlet property="voteAvgLabel" destination="Rsu-KU-jaj" id="QTz-Z9-SBc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lfo-xE-l7D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3820" y="-106"/>
+            <point key="canvasLocation" x="3818.8405797101454" y="-106.47321428571428"/>
         </scene>
         <!--The TVDB-->
         <scene sceneID="xMO-U5-SZS">
@@ -106,7 +197,7 @@
                     <navigationItem key="navigationItem" title="The TVDB" largeTitleDisplayMode="always" id="W8b-Ce-KDJ"/>
                     <connections>
                         <outlet property="tvTableView" destination="28k-j4-ZaF" id="uns-gI-4sf"/>
-                        <segue destination="fG7-Yh-swy" kind="show" identifier="toShowDetail" id="HcS-wf-Irw"/>
+                        <segue destination="fG7-Yh-swy" kind="show" identifier="toShowTVDetail" id="HcS-wf-Irw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IzR-l1-ygV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
